--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Motrice AB</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .contact-info {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Motrice AB</h1>
+    <div class="container">
+        <div class="vcard">
+            <div class="fn">Motrice AB</div>
+            <div class="org">org.nr: 556950-4979</div>
+            <div class="adr">
+                <div class="street-address">Halmstadsvägen 16</div>
+                <div class="locality">Stockholm</div>
+                <div class="country-name">Sweden</div>
+            </div>
+            <div class="email">info@motrice.se</div>
+            <div class="tel">+46 733 414983</div>
+        </div>
+    </div>
+</body>
+</html>
